// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates 3nodes istanbul bash no tessera cakeshop 1`] = `
Array [
  Object {
    "name": "node1",
    "rpcUrl": "http://localhost:22000",
    "transactionManagerUrl": "",
  },
  Object {
    "name": "node2",
    "rpcUrl": "http://localhost:22001",
    "transactionManagerUrl": "",
  },
  Object {
    "name": "node3",
    "rpcUrl": "http://localhost:22002",
    "transactionManagerUrl": "",
  },
]
`;

exports[`creates 3nodes istanbul bash tessera cakeshop 1`] = `
Array [
  Object {
    "name": "node1",
    "rpcUrl": "http://localhost:22000",
    "transactionManagerUrl": "http://localhost:9081",
  },
  Object {
    "name": "node2",
    "rpcUrl": "http://localhost:22001",
    "transactionManagerUrl": "http://localhost:9082",
  },
  Object {
    "name": "node3",
    "rpcUrl": "http://localhost:22002",
    "transactionManagerUrl": "http://localhost:9083",
  },
]
`;

exports[`creates 3nodes raft dockerFile no tessera cakeshop 1`] = `
Array [
  Object {
    "name": "node1",
    "rpcUrl": "http://node1:8545",
    "transactionManagerUrl": "",
  },
  Object {
    "name": "node2",
    "rpcUrl": "http://node2:8545",
    "transactionManagerUrl": "",
  },
  Object {
    "name": "node3",
    "rpcUrl": "http://node3:8545",
    "transactionManagerUrl": "",
  },
]
`;

exports[`creates 3nodes raft dockerFile tessera cakeshop 1`] = `
Array [
  Object {
    "name": "node1",
    "rpcUrl": "http://node1:8545",
    "transactionManagerUrl": "http://txmanager1:9080",
  },
  Object {
    "name": "node2",
    "rpcUrl": "http://node2:8545",
    "transactionManagerUrl": "http://txmanager2:9080",
  },
  Object {
    "name": "node3",
    "rpcUrl": "http://node3:8545",
    "transactionManagerUrl": "http://txmanager3:9080",
  },
]
`;
